Add logging for failed loading

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.airlift</groupId>
+            <artifactId>log</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
