Added Hive UDF function

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>log</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
