--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,32 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <build>
+       <plugins> 
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+            <version>2.17</version>
+            <executions>
+                <execution>
+                    <id>validate</id>
+                    <phase>validate</phase>
+                    <configuration>
+                       <configLocation>src/checkstyle/checks.xml</configLocation>
+                        <encoding>UTF-8</encoding>
+                        <consoleOutput>true</consoleOutput>
+                        <failsOnError>true</failsOnError>
+                        <linkXRef>false</linkXRef>
+                    </configuration>
+                <goals>
+                    <goal>check</goal>
+                </goals>
+                </execution>
+            </executions>
+        </plugin>
+      </plugins>
+    </build>
+
     <groupId>com.qubole.presto</groupId>
     <artifactId>udfs</artifactId>
     <name>udfs</name>
