--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,9 @@
     <name>PrestoUDFs</name>
 
     <scm>
-        <url>https://github.com/qubole/presto-udfs.git</url>
+        <url>https://github.com/qubole/presto-udfs</url>
+        <connection>scm:git:git://github.com/qubole/presto-udfs.git</connection>
+        <developerConnection>scm:git:git@github.com:qubole/presto-udfs.git</developerConnection>
     </scm>
 
     <licenses>
@@ -135,8 +137,8 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.5</version>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
             </plugin>
         </plugins>
     </build>
