--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 
     <groupId>com.qubole.presto</groupId>
     <artifactId>udfs</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.3-SNAPSHOT</version>
     <name>PrestoUDFs</name>
     <url>https://github.com/qubole/presto-udfs</url>
     <description>Common Functions for the Facebook Presto SQL Engine</description>
@@ -68,7 +68,7 @@
         <url>https://github.com/qubole/presto-udfs</url>
         <connection>scm:git:git://github.com/qubole/presto-udfs.git</connection>
         <developerConnection>scm:git:git@github.com:qubole/presto-udfs.git</developerConnection>
-      <tag>udfs-0.1.2</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <licenses>
