--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <!--
         <air.main.basedir>${project.parent.basedir}</air.main.basedir>
     -->
-        <presto.version>0.142</presto.version>
+        <presto.version>0.157</presto.version>
         <slice.version>0.15</slice.version>
         <guava.version>18.0</guava.version>
         <javax.inject.version>1</javax.inject.version>
@@ -46,7 +46,6 @@
                         <encoding>UTF-8</encoding>
                         <consoleOutput>true</consoleOutput>
                         <failsOnError>true</failsOnError>
-                        <linkXRef>false</linkXRef>
                     </configuration>
                 <goals>
                     <goal>check</goal>
@@ -58,6 +57,45 @@
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.1</version>
+           </plugin>
+
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-shade-plugin</artifactId>
+               <version>2.3</version>
+               <executions>
+                   <execution>
+                       <phase>package</phase>
+                       <goals>
+                           <goal>shade</goal>
+                       </goals>
+                       <configuration>
+                           <artifactSet>
+                               <!-- dont need to add airlift.slice, presto provides it to all plugins -->
+                               <includes>
+                                   <include>com.google.guava:guava</include>
+                                   <include>io.airlift:log</include>
+                                   <include>joda-time:joda-time</include>
+                               </includes>
+                           </artifactSet>
+                           <relocations>
+                               <relocation>
+                                   <pattern>org.joda</pattern>
+                                   <shadedPattern>org.joda.shaded</shadedPattern>
+                               </relocation>
+                               <relocation>
+                                   <pattern>com.google</pattern>
+                                   <shadedPattern>com.google.shaded</shadedPattern>
+                               </relocation>
+                               <relocation>
+                                   <pattern>io.airlift.log</pattern>
+                                   <shadedPattern>io.airlift.log.shaded</shadedPattern>
+                               </relocation>
+                           </relocations>
+
+                       </configuration>
+                   </execution>
+               </executions>
            </plugin>
       </plugins>
     </build>
