Move to prestosql

--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
     <!--
         <air.main.basedir>${project.parent.basedir}</air.main.basedir>
     -->
-        <presto.version>0.193</presto.version>
-        <slice.version>0.15</slice.version>
-        <guava.version>18.0</guava.version>
+        <presto.version>317</presto.version>
+        <slice.version>0.36</slice.version>
+        <guava.version>26.0-jre</guava.version>
         <javax.inject.version>1</javax.inject.version>
-        <io.airlift.log.version>0.125</io.airlift.log.version>
+        <io.airlift.log.version>0.183</io.airlift.log.version>
         <jodatime.version>2.8.1</jodatime.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -135,13 +135,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.facebook.presto</groupId>
+            <groupId>io.prestosql</groupId>
             <artifactId>presto-spi</artifactId>
             <version>${presto.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.facebook.presto</groupId>
+            <groupId>io.prestosql</groupId>
             <artifactId>presto-main</artifactId>
             <version>${presto.version}</version>
         </dependency>
