--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
 
     <groupId>com.qubole.presto</groupId>
     <artifactId>udfs</artifactId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>3.0.0</version>
     <name>PrestoUDFs</name>
     <url>https://github.com/qubole/presto-udfs</url>
     <description>Common Functions for the Facebook Presto SQL Engine</description>
@@ -111,7 +111,7 @@
         <url>https://github.com/qubole/presto-udfs</url>
         <connection>scm:git:git://github.com/qubole/presto-udfs.git</connection>
         <developerConnection>scm:git:git@github.com:qubole/presto-udfs.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>udfs-3.0.0</tag>
     </scm>
 
     <licenses>
